@@ -37,8 +37,48 @@ lazy val root = (project in file("."))
     Test / logBuffered := false,
     Test / parallelExecution := false,
     
-    // Fork JVM for tests with Java 11 compatibility
+    // Fork JVM for both main execution and tests (CRITICAL for applying JVM options)
+    fork := true,
     Test / fork := true,
+    
+    // Main execution JVM options (Java 11 compatible)
+    run / javaOptions ++= Seq(
+      // Memory management
+      "-Xmx12g",                        // 12GB heap for development
+      "-XX:+UseG1GC",                   // G1 garbage collector
+      "-XX:G1HeapRegionSize=16m",       // Optimal region size
+      "-XX:MaxGCPauseMillis=200",       // Low-latency GC
+      
+      // Spark configuration
+      "-Dspark.master=local[16]",       // Use optimal partition count
+      "-Dspark.app.name=LastFMSessionAnalyzer-Production",
+      "-Dspark.sql.shuffle.partitions=16",
+      "-Dspark.sql.adaptive.enabled=true",
+      "-Dspark.sql.adaptive.advisoryPartitionSizeInBytes=128m",
+      
+      // Hadoop compatibility
+      "-Dhadoop.home.dir=/tmp",
+      
+      // Java 11 compatibility exports
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-exports=java.base/sun.nio.cs=ALL-UNNAMED", 
+      "--add-exports=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-exports=java.base/sun.util.calendar=ALL-UNNAMED",
+      
+      // Java 11 compatibility opens
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/javax.security.auth=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      
+      // Performance and debugging (Java 11 compatible)
+      "-XX:+UnlockExperimentalVMOptions",
+      "-Dorg.slf4j.simpleLogger.defaultLogLevel=warn"
+    ),
     Test / javaOptions ++= Seq(
       "-Dspark.master=local[2]",
       "-Dspark.app.name=LastFMSessionAnalyzer-Tests",
